[package]
name = "pot_of_greed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.30"
roux = "2.2.9"
roux-stream = "0.2.0"
tokio = { version = "1.35.1", features = ["full"]}
tokio-retry = "0.3.0"
